Project

General

Profile

Actions

Bug #46849

closed

RGWObjVersionTracker does not track version over increments

Added by Casey Bodley over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
cache
Backport:
nautilus octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

after being used for a read-modify-write, RGWObjVersionTracker::apply_changes() will clear the read_version. this means later writes with that RGWObjVersionTracker will not call cls_version_check(), so lose the ability to detect racing writes. this read_version=0 will also get stored in the system object cache, so later read-modify-writes are also affected


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #47319: octopus: RGWObjVersionTracker does not track version over incrementsResolvedNathan CutlerActions
Copied to rgw - Backport #47320: nautilus: RGWObjVersionTracker does not track version over incrementsResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Pull request ID set to 36502
Actions #2

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by J. Eric Ivancich over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47319: octopus: RGWObjVersionTracker does not track version over increments added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47320: nautilus: RGWObjVersionTracker does not track version over increments added
Actions #6

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF